// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File: LinkButtonPrivateRedirect.js Component LinkButtonPrivateRedirect It should take a snapshot 1`] = `
<DocumentFragment>
   
  <div
    class="button-private-redirect-section"
  >
    <button
      data-testid="button-private-redirect-id"
      type="button"
    >
        
    </button>
  </div>
    
</DocumentFragment>
`;

exports[`File: LinkButtonPrivateRedirect.js Component: LinkButtonPrivateRedirect With Props It can take a snapshot 1`] = `
<DocumentFragment>
   
  <div
    class="button-private-redirect-section"
  >
    <button
      data-testid="button-private-redirect-id"
      type="button"
    >
       test 
    </button>
  </div>
   
</DocumentFragment>
`;

exports[`File: LinkButtonPrivateRedirect.js Component: LinkButtonPrivateRedirect Without Props It can take a snapshot 1`] = `
<DocumentFragment>
   
  <div
    class="button-private-redirect-section"
  >
    <button
      data-testid="button-private-redirect-id"
      type="button"
    >
        
    </button>
  </div>
   
</DocumentFragment>
`;
